==> kubanecxxx/library/rf24/RF24.cpp <==
#include "hal.h"
#include "ch.h"
#include "nRF24L01.h"
#include "RF24.h"
#include <string.h>
#define _BV(x) (1<<(x))
#define min(x,y) (x < y ? x : y)
#define HIGH 1
#define LOW 0
#define cs_on() csn(LOW)
#define cs_off() csn(HIGH)
#define IF_SERIAL_DEBUG(x)
#define spiAcquireBus(x)
#define spiReleaseBus(x)

void RF24::ce(int level)
{
	palWritePad(cfg->ce_port, cfg->ce_pin, level);
}

void RF24::csn(int level)
{
	palWritePad(cfg->cs_port, cfg->cs_pin, level);
}

uint8_t RF24::read_register(uint8_t reg, uint8_t* buf, uint8_t len)
{
	uint8_t res;

	spiAcquireBus(spi);
	cs_on();
	res = spiPolledExchange(spi, R_REGISTER | (REGISTER_MASK & reg));
	if (len == 1)
		buf[0] = spiPolledExchange(spi, 0);
	else
		spiReceive(spi, len, buf);
	cs_off();
	spiReleaseBus(spi);

	return res;
}

uint8_t RF24::read_register(uint8_t reg)
{
	uint8_t d;
	read_register(reg, &d, 1);
	return d;
}

uint8_t RF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
	uint8_t tx = W_REGISTER | (REGISTER_MASK & reg);
	uint8_t res;

	spiAcquireBus(spi);
	cs_on();
	res = spiPolledExchange(spi, tx);
	if (len == 1)
		spiPolledExchange(spi, buf[0]);
	else
		spiSend(spi, len, buf);
	cs_off();
	spiReleaseBus(spi);

	return res;
}

uint8_t RF24::write_register(uint8_t reg, uint8_t value)
{
	return write_register(reg, &value, 1);
}

uint8_t RF24::write_payload(const void* buf, uint8_t len)
{
	uint8_t data_len = min(len, payload_size);
	uint8_t blank_len = !dynamic_payloads_enabled ? payload_size - data_len : 0;
	uint8_t res;

	spiAcquireBus(spi);
	cs_on();
	res = spiPolledExchange(spi, W_TX_PAYLOAD);
	spiSend(spi, data_len, buf);
	if (blank_len)
		spiIgnore(spi, blank_len);
	cs_off();
	spiReleaseBus(spi);

	return res;
}

uint8_t RF24::read_payload(void* buf, uint8_t len)
{
	uint8_t status;
	uint8_t data_len = min(len, payload_size);
	uint8_t blank_len = dynamic_payloads_enabled ? payload_size - data_len : 0;

	uint8_t tx[len];
	memset(tx, 0xff, len);
	//printf("[Reading %u bytes %u blanks]",data_len,blank_len);

	spiAcquireBus(spi);
	csn(LOW);
	status = spiPolledExchange(spi, R_RX_PAYLOAD);
	spiExchange(spi, data_len, tx, buf);
	if (blank_len)
		spiIgnore(spi, blank_len);
	csn(HIGH);
	spiReleaseBus(spi);

	return status;
}

uint8_t RF24::flush_rx(void)
{
	uint8_t status;

	spiAcquireBus(spi);
	csn(LOW);
	status = spiPolledExchange(spi, FLUSH_RX);
	csn(HIGH);
	spiReleaseBus(spi);

	return status;
}

uint8_t RF24::flush_tx(void)
{
	uint8_t status;

	spiAcquireBus(spi);
	csn(LOW);
	status = spiPolledExchange(spi, FLUSH_TX);
	csn(HIGH);
	spiReleaseBus(spi);

	return status;
}

uint8_t RF24::get_status(void)
{
	uint8_t status;

	spiAcquireBus(spi);
	csn(LOW);
	status = spiPolledExchange(spi, NOP);
	csn(HIGH);
	spiReleaseBus(spi);

	return status;
}

void RF24::begin(void)
{
	// Initialize pins
	palSetPadMode(cfg->ce_port, cfg->ce_pin, PAL_MODE_OUTPUT_PUSHPULL);
	palSetPadMode(cfg->cs_port, cfg->cs_pin, PAL_MODE_OUTPUT_PUSHPULL);

	stopListening();

	ce(LOW);
	csn(HIGH);

	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
	chThdSleepMilliseconds(5);

	// Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
	// WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
	// sizes must never be used. See documentation for a more complete explanation.
	write_register(SETUP_RETR, (0B1111 << ARD) | (0B1111 << ARC));

	// Restore our default PA level
	setPALevel(RF24_PA_MAX);

	// Determine if this is a p or non-p RF24 module and then
	// reset our data rate back to default value. This works
	// because a non-P variant won't allow the data rate to
	// be set to 250Kbps.
	if (setDataRate(RF24_250KBPS))
	{
		p_variant = true;
	}

	// Then set the data rate to the slowest (and most reliable) speed supported by all
	// hardware.
	setDataRate(RF24_1MBPS);

	// Initialize CRC and request 2-byte (16bit) CRC
	setCRCLength(RF24_CRC_16);

	// Disable dynamic payloads, to match dynamic_payloads_enabled setting
	write_register(DYNPD, 0);

	// Reset current status
	// Notice reset and flush is the last thing we do
	write_register(STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

	// Set up default configuration.  Callers can always change it later.
	// This channel should be universally safe and not bleed over into adjacent
	// spectrum.
	setChannel(76);

	// Flush buffers
	flush_rx();
	flush_tx();

}

void RF24::startListening(void)
{
	write_register(CONFIG, read_register(CONFIG) | _BV(PWR_UP) | _BV(PRIM_RX));
	write_register(STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

	// Restore the pipe0 adddress, if exists
	if (pipe0_reading_address)
		write_register(RX_ADDR_P0,
				reinterpret_cast<const uint8_t*>(&pipe0_reading_address), 5);

	// Flush buffers
	flush_rx();
	flush_tx();

	// Go!
	ce(HIGH);

	// wait for the radio to come up (130us actually only needed)
	chThdSleepMicroseconds(200);
}

void RF24::startWrite(const void* buf, uint8_t len)
{
	// Transmitter power-up
	write_register(CONFIG,
			(read_register(CONFIG) | _BV(PWR_UP)) & ~_BV(PRIM_RX));
	chThdSleepMicroseconds(1500);

	// Send the payload
	write_payload(buf, len);

	// Allons!
	ce(HIGH);
	chThdSleepMicroseconds(100);
	ce(LOW);
}

uint8_t RF24::getDynamicPayloadSize(void)
{
	uint8_t result = 0;

	spiAcquireBus(spi);
	csn(LOW);
	spiPolledExchange(spi, R_RX_PL_WID);
	result = spiPolledExchange(spi, 0xff);
	csn(HIGH);
	spiReleaseBus(spi);

	return result;
}

void RF24::toggle_features(void)
{
	spiAcquireBus(spi);
	csn(LOW);
	spiPolledExchange(spi, ACTIVATE);
	spiPolledExchange(spi, 0x73);
	csn(HIGH);
	spiReleaseBus(spi);
}

void RF24::writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{

	spiAcquireBus(spi);
	csn(LOW);
	spiPolledExchange(spi, W_ACK_PAYLOAD | (pipe& 0b111));
	const uint8_t max_payload_size = 32;
	uint8_t data_len = min(len, max_payload_size);
	spiSend(spi, data_len, buf);

	csn(HIGH);
	spiReleaseBus(spi);
}
